# libxosd

./: CMakeLists.txt  README.md  xosd.pc.in
src/: osd_cat.c
src/libxosd/: intern.h  xosd.c
